Balance Checker Fix
-Balance checker should be accurate now
-Need to test more and remove println statements
-Added checking of pending transactions to not include them in the key index update

To retrieve balance from stored preference @danielpollithy @gosticks:

prefFile = getActivity().getString(R.string.preference_file_key
SharedPreferences sharedPref = context.getSharedPreferences(prefFile, Context.MODE_PRIVATE);
String defaultValue = "0";
String storedBalance = sharedPref.getString("balance",defaultValue);

-Added About, License, Agreement settings sections
-Updated and added security settings and usage

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -6,14 +6,6 @@
         android:key="pref_key_wifi_settings"
         android:elevation="10dp">
 
-        <ListPreference
-            android:key="pref_key_security"
-            android:divider="@null"
-            android:dividerHeight="0dp"
-            android:entries="@array/securityPref"
-            android:entryValues="@array/securityPref"
-            android:title="Security" />
-
         <Preference
             android:divider="@null"
             android:dividerHeight="0dp"
@@ -28,6 +20,15 @@
         android:animateLayoutChanges="true"
         android:key="pref_key_IOTA_settings">
 
+
+        <ListPreference
+            android:key="pref_key_security"
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:defaultValue="2"
+            android:entries="@array/securityPref"
+            android:entryValues="@array/securityPref"
+            android:title="Security pk/address" />
 
         <ListPreference
             android:key="pref_key_network_timeout"
@@ -126,6 +127,31 @@
         <Preference
             android:key="pref_key_reset_wallet"
             android:title="Reset Wallet"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:title="About"
+        android:key="pref_key_about"
+        android:elevation="10dp">
+
+        <Preference
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:key="pref_key_reset_version"
+            android:title="@string/app_version"/>
+
+        <Preference
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:key="pref_key_license"
+            android:title="License"/>
+
+        <Preference
+            android:divider="@null"
+            android:dividerHeight="0dp"
+            android:key="pref_key_agreement"
+            android:title="Agreement"/>
 
     </PreferenceCategory>
 
