- removed switch and introduced foreground service - so close to switching the modes

--- a/app/src/main/res/layout/activity_roaming.xml
+++ b/app/src/main/res/layout/activity_roaming.xml
@@ -102,10 +102,14 @@
 
             <TextView
                 android:id="@+id/stopText"
+                android:gravity="center"
+                android:layout_margin="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/channelClosed"
-                android:visibility="invisible"/>
+                android:visibility="gone"/>
+
+
 
         </LinearLayout>
 
