--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -19,7 +19,7 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay">
-            <Switch
+            <!--<Switch
                 android:layout_width="wrap_content"
                 android:layout_height="?attr/actionBarSize"
                 android:layout_gravity="end"
@@ -27,7 +27,7 @@
                 android:checked="false"
                 android:hint="@string/wifi_p2p_discovery"
                 android:width="120dp"
-                android:id="@+id/wifiSwitch"/>
+                android:id="@+id/wifiSwitch"/>-->
         </android.support.v7.widget.Toolbar>
 
 
