fix seed problem start to refactor the service<->ui problem

--- a/app/src/main/res/layout/welcome_screen1.xml
+++ b/app/src/main/res/layout/welcome_screen1.xml
@@ -28,7 +28,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="The blablablablabla App"
+            android:text="Share remaining megabytes for iota"
             android:textColor="@android:color/white"
             android:textSize="20dp"
             android:layout_marginTop="15dp"/>
