License & Agreement + Pending funds notice
-Added user agreement and licenses dialogs
-Added pendings funds notice

-Removed units and network timeout from settings for now

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -30,17 +30,21 @@
             android:entryValues="@array/securityPref"
             android:title="Security pk/address" />
 
+        <!--
         <ListPreference
             android:key="pref_key_network_timeout"
             android:entries="@array/networkTimeoutPref"
             android:entryValues="@array/networkTimeoutPref"
             android:title="Network timeout" />
+        -->
 
+        <!--
         <ListPreference
             android:key="pref_key_units"
             android:entries="@array/unitsPref"
             android:entryValues="@array/unitsPref"
             android:title="Units" />
+        -->
 
 
         <SwitchPreference
@@ -138,7 +142,7 @@
         <Preference
             android:divider="@null"
             android:dividerHeight="0dp"
-            android:key="pref_key_reset_version"
+            android:key="pref_key_app_version"
             android:title="@string/app_version"/>
 
         <Preference
